[gd_scene load_steps=22 format=3 uid="uid://5u8n8r0pqqau"]

[ext_resource type="Texture2D" uid="uid://dm3up0pl6aobd" path="res://shop-buy-menu.png" id="1_kyaf8"]
[ext_resource type="PackedScene" uid="uid://gtxesqctsrwo" path="res://typing_text.tscn" id="2_65dbk"]
[ext_resource type="Script" path="res://shop_buy_menu.gd" id="2_lnknx"]
[ext_resource type="FontFile" uid="uid://d2b1w5gku8n4v" path="res://GrapeSoda.ttf" id="3_86ley"]
[ext_resource type="Texture2D" uid="uid://cut84w2p6titv" path="res://selector.png" id="5_7dyge"]
[ext_resource type="PackedScene" uid="uid://bj2g7n5q6e3nx" path="res://shop_moves_box.tscn" id="6_mgwhr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfiy1"]
resource_local_to_scene = true
size = Vector2(162, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ckilv"]
size = Vector2(133, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m525e"]
size = Vector2(154, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqqot"]
size = Vector2(127, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6e5g"]
size = Vector2(177, 53)

[sub_resource type="LabelSettings" id="LabelSettings_nwf7j"]
resource_local_to_scene = true
font = ExtResource("3_86ley")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_fhnua"]
resource_local_to_scene = true
font = ExtResource("3_86ley")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_p6x5h"]
resource_local_to_scene = true
font = ExtResource("3_86ley")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_oy6q1"]
resource_local_to_scene = true
font = ExtResource("3_86ley")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_t48i2"]
resource_local_to_scene = true
font = ExtResource("3_86ley")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_vb7i7"]
resource_local_to_scene = true
font = ExtResource("3_86ley")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_m73q1"]
resource_local_to_scene = true
font = ExtResource("3_86ley")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_8yacr"]
resource_local_to_scene = true
font = ExtResource("3_86ley")
font_size = 48
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6yb4y"]
resource_local_to_scene = true
font = ExtResource("3_86ley")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_wodvc"]
resource_local_to_scene = true
font = ExtResource("3_86ley")
font_size = 48

[node name="ShopBuyMenu" type="Sprite2D"]
texture = ExtResource("1_kyaf8")
script = ExtResource("2_lnknx")

[node name="HealsSelect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealsSelect"]
position = Vector2(-122, -113.5)
shape = SubResource("RectangleShape2D_mfiy1")

[node name="HealthSelect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthSelect"]
position = Vector2(-70.5, 29)
shape = SubResource("RectangleShape2D_ckilv")

[node name="DamageSelect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageSelect"]
position = Vector2(-61, 81)
shape = SubResource("RectangleShape2D_m525e")

[node name="SpeedSelect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpeedSelect"]
position = Vector2(-75.5, 135)
shape = SubResource("RectangleShape2D_pqqot")

[node name="MovesSelect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovesSelect"]
position = Vector2(-107.5, 201.5)
shape = SubResource("RectangleShape2D_c6e5g")

[node name="HealsCost" parent="." instance=ExtResource("2_65dbk")]
offset_left = 63.0
offset_top = -143.0
offset_right = -404.0
offset_bottom = -668.0
text = "1"
label_settings = SubResource("LabelSettings_nwf7j")
text_size = 48
reveal = false

[node name="HealsHave" parent="." instance=ExtResource("2_65dbk")]
offset_left = 132.0
offset_top = -143.0
offset_right = -305.0
offset_bottom = -668.0
text = "x0"
label_settings = SubResource("LabelSettings_fhnua")
text_size = 48
reveal = false

[node name="HealthUpCost" parent="." instance=ExtResource("2_65dbk")]
offset_left = 63.0
offset_top = 2.0
offset_right = -404.0
offset_bottom = -523.0
text = "1"
label_settings = SubResource("LabelSettings_p6x5h")
text_size = 48
reveal = false

[node name="HealthUpHave" parent="." instance=ExtResource("2_65dbk")]
offset_left = 132.0
offset_top = 2.0
offset_right = -305.0
offset_bottom = -523.0
text = "10"
label_settings = SubResource("LabelSettings_oy6q1")
text_size = 48
reveal = false

[node name="DamageUpCost" parent="." instance=ExtResource("2_65dbk")]
offset_left = 63.0
offset_top = 55.0
offset_right = -404.0
offset_bottom = -470.0
text = "1"
label_settings = SubResource("LabelSettings_t48i2")
text_size = 48
reveal = false

[node name="DamageUpHave" parent="." instance=ExtResource("2_65dbk")]
offset_left = 132.0
offset_top = 55.0
offset_right = -305.0
offset_bottom = -470.0
text = "1-3"
label_settings = SubResource("LabelSettings_vb7i7")
text_size = 48
reveal = false

[node name="SpeedUpCost" parent="." instance=ExtResource("2_65dbk")]
offset_left = 63.0
offset_top = 105.0
offset_right = -404.0
offset_bottom = -420.0
text = "1"
label_settings = SubResource("LabelSettings_m73q1")
text_size = 48
reveal = false

[node name="SpeedUpHave" parent="." instance=ExtResource("2_65dbk")]
offset_left = 132.0
offset_top = 105.0
offset_right = -305.0
offset_bottom = -420.0
text = "1/s"
label_settings = SubResource("LabelSettings_8yacr")
text_size = 48
reveal = false

[node name="TotalLevel" parent="." instance=ExtResource("2_65dbk")]
offset_left = 72.0
offset_top = -58.0
offset_right = -326.0
offset_bottom = -583.0
text = "Lv1"
label_settings = SubResource("LabelSettings_6yb4y")
text_size = 48

[node name="KillsToSpend" parent="." instance=ExtResource("2_65dbk")]
offset_left = 48.0
offset_top = 176.0
offset_right = -254.0
offset_bottom = -349.0
text = "Kills: 0"
label_settings = SubResource("LabelSettings_wodvc")
horizontal_alignment = 0
text_size = 48
reveal = false

[node name="Selector" type="Sprite2D" parent="."]
position = Vector2(-211, 199)
texture = ExtResource("5_7dyge")

[node name="ShopMovesBox" parent="." instance=ExtResource("6_mgwhr")]
visible = false
position = Vector2(443, 193)
scale = Vector2(1e-05, 1e-05)

[connection signal="input_event" from="HealsSelect" to="." method="_on_heals_select_input_event"]
[connection signal="mouse_entered" from="HealsSelect" to="." method="_on_heals_select_mouse_entered"]
[connection signal="input_event" from="HealthSelect" to="." method="_on_health_select_input_event"]
[connection signal="mouse_entered" from="HealthSelect" to="." method="_on_health_select_mouse_entered"]
[connection signal="input_event" from="DamageSelect" to="." method="_on_damage_select_input_event"]
[connection signal="mouse_entered" from="DamageSelect" to="." method="_on_damage_select_mouse_entered"]
[connection signal="input_event" from="SpeedSelect" to="." method="_on_speed_select_input_event"]
[connection signal="mouse_entered" from="SpeedSelect" to="." method="_on_speed_select_mouse_entered"]
[connection signal="input_event" from="MovesSelect" to="." method="_on_moves_select_input_event"]
[connection signal="mouse_entered" from="MovesSelect" to="." method="_on_moves_select_mouse_entered"]
